@@ -180,12 +180,9 @@ $GLOBALS['TL_LANG']['ISO']['cc_exp_month'] = 'Udløbs måned';
 $GLOBALS['TL_LANG']['ISO']['cc_exp_year'] = 'Udløbs år';
 $GLOBALS['TL_LANG']['ISO']['cc_issue_number'] = 'Credit card issue number, 2 digits (required for Maestro and Solo cards).';
 $GLOBALS['TL_LANG']['ISO']['cc_start_date'] = 'Credit card start date (required for Maestro and Solo cards).';
-$GLOBALS['TL_LANG']['ISO']['pay_with_paypal'][0] = 'Betal med PayPal';
-$GLOBALS['TL_LANG']['ISO']['pay_with_paypal'][1] = 'Du vil blive viderestillet til PayPal betalingssiden. Hvis du ikke automatisk bliver viderestillet, klik på knappen "Betal nu"';
-$GLOBALS['TL_LANG']['ISO']['pay_with_paypal'][2] = 'Betal nu';
-$GLOBALS['TL_LANG']['ISO']['pay_with_epay'][0] = 'Betal med ePay';
-$GLOBALS['TL_LANG']['ISO']['pay_with_epay'][1] = 'Du vil blive viderestillet til ePay betalingssiden. Hvis du ikke automatisk bliver viderestillet, klik på knappen "Betal nu"';
-$GLOBALS['TL_LANG']['ISO']['pay_with_epay'][2] = 'Betal nu';
+$GLOBALS['TL_LANG']['MSC']['pay_with_redirect'][0] = 'Bearbejder betaling';
+$GLOBALS['TL_LANG']['MSC']['pay_with_redirect'][1] = 'Du vil blive viderestillet til betalingssiden. Hvis du ikke automatisk bliver viderestillet kan du klikke på knappen "Betal nu".';
+$GLOBALS['TL_LANG']['MSC']['pay_with_redirect'][2] = 'Betal nu';
 $GLOBALS['TL_LANG']['ISO']['backendPaymentNotFound'] = 'Betalingsmodul ikke fundet!';
 $GLOBALS['TL_LANG']['ISO']['backendShippingNotFound'] = 'Leveringsmodul ikke fundet!';
 $GLOBALS['TL_LANG']['ISO']['backendPaymentNoInfo'] = 'Dette betalingsmodul tillader ikke yderligere information.';
