@@ -223,8 +223,7 @@ $GLOBALS['TL_LANG']['ISO']['cc_exp_year']					= 'Expiration year';
 $GLOBALS['TL_LANG']['ISO']['cc_issue_number']				= 'Credit card issue number, 2 digits (required for Maestro and Solo cards).';
 $GLOBALS['TL_LANG']['ISO']['cc_start_date']					= 'Credit card start date (required for Maestro and Solo cards).';
 $GLOBALS['TL_LANG']['MSC']['pay_with_cc']					= array('Processing payment', 'Please enter the required information to process your payment.', 'Pay now');
-$GLOBALS['TL_LANG']['ISO']['pay_with_paypal']				= array('Pay with PayPal', 'You will be redirected to the PayPal payment website. If you are not automatically redirected, please click on the "Pay now" button.', 'Pay now');
-$GLOBALS['TL_LANG']['MSC']['pay_with_epay']					= array('Pay with ePay', 'You will be redirected to the ePay payment website. If you are not automatically redirected, please click on the "Pay now" button.', 'Pay now');
+$GLOBALS['TL_LANG']['MSC']['pay_with_redirect']				= array('Processing payment', 'You will be redirected to the payment gateway website. If you are not automatically redirected, please click on the "Pay now" button.', 'Pay now');
 $GLOBALS['TL_LANG']['MSC']['backendPaymentEPay']			= 'Please use the following address to access the ePay admin panel';
 $GLOBALS['TL_LANG']['ISO']['backendPaymentNotFound']		= 'Payment module not found!';
 $GLOBALS['TL_LANG']['ISO']['backendShippingNotFound']		= 'Shipping module not found!';
