@@ -177,12 +177,9 @@ $GLOBALS['TL_LANG']['ISO']['cc_exp_month'] = 'Mois de l\'expiration';
 $GLOBALS['TL_LANG']['ISO']['cc_exp_year'] = 'Année de l\'expiration';
 $GLOBALS['TL_LANG']['ISO']['cc_issue_number'] = 'Numéro de parution de la carte de crédit, 2 chiffres (pour les cartes Maestro et Solo)';
 $GLOBALS['TL_LANG']['ISO']['cc_start_date'] = 'Date du début de la carte de crédit (pour les cartes Maestro et Solo)';
-$GLOBALS['TL_LANG']['ISO']['pay_with_paypal'][0] = 'Paiement par PayPal';
-$GLOBALS['TL_LANG']['ISO']['pay_with_paypal'][1] = 'Vous êtes redirigés au site de PayPal. Si ça ne se passe pas automatiquement, appuyez sur le bouton "Payer maintenant"';
-$GLOBALS['TL_LANG']['ISO']['pay_with_paypal'][2] = 'Payer maintenant';
-$GLOBALS['TL_LANG']['ISO']['pay_with_epay'][0] = 'Payer par ePaiement';
-$GLOBALS['TL_LANG']['ISO']['pay_with_epay'][1] = 'Vous êtes redirigés au site de ePay. Si ça ne se passe pas automatiquement, appuyez sur le bouton "Payer maintenant"';
-$GLOBALS['TL_LANG']['ISO']['pay_with_epay'][2] = 'Payer maintenant';
+$GLOBALS['TL_LANG']['MSC']['pay_with_redirect'][0] = 'Procéder au paiement';
+$GLOBALS['TL_LANG']['MSC']['pay_with_redirect'][1] = 'Vous allez être redirigés sur le site du fournisseur de services de paiement. Si vous n\'ètes pas automatiquement redirigé sur le site, appuyez sur le bouton "Payer maintenant".';
+$GLOBALS['TL_LANG']['MSC']['pay_with_redirect'][2] = 'Payer maintenant';
 $GLOBALS['TL_LANG']['ISO']['backendPaymentNotFound'] = 'Module de paiement inconnu!';
 $GLOBALS['TL_LANG']['ISO']['backendShippingNotFound'] = 'Module de livraison inconnu!';
 $GLOBALS['TL_LANG']['ISO']['backendPaymentNoInfo'] = 'Ce module de paiement ne fournit pas d\'informations supplémentaires';
