@@ -184,12 +184,9 @@ $GLOBALS['TL_LANG']['ISO']['cc_start_date'] = 'Data d\'inizio della carta di cre
 $GLOBALS['TL_LANG']['MSC']['pay_with_cc'][0] = 'Il pagamento viene processato';
 $GLOBALS['TL_LANG']['MSC']['pay_with_cc'][1] = 'Si prega di inserire l\'informazione richiesta per poter processare il pagamento.';
 $GLOBALS['TL_LANG']['MSC']['pay_with_cc'][2] = 'Paga ora';
-$GLOBALS['TL_LANG']['ISO']['pay_with_paypal'][0] = 'Paga con PayPal';
-$GLOBALS['TL_LANG']['ISO']['pay_with_paypal'][1] = 'Sarà automaticamente deviato/a sul sito di pagamento Paypal. Se la deviazione non avviene automaticamente, si prega di cliccare sul bottone "Paga ora".';
-$GLOBALS['TL_LANG']['ISO']['pay_with_paypal'][2] = 'Paga ora';
-$GLOBALS['TL_LANG']['ISO']['pay_with_epay'][0] = 'Paga con ePay';
-$GLOBALS['TL_LANG']['ISO']['pay_with_epay'][1] = 'Sarà automaticamente deviato/a sul sito di pagamento ePay. Se la deviazione non avviene automaticamente, si prega di cliccare sul bottone "Paga ora".';
-$GLOBALS['TL_LANG']['ISO']['pay_with_epay'][2] = 'Paga ora';
+$GLOBALS['TL_LANG']['MSC']['pay_with_redirect'][0] = 'Il pagamento viene processato';
+$GLOBALS['TL_LANG']['MSC']['pay_with_redirect'][1] = 'Sarà automaticamente deviato/a sul sito del prestatore di servizi di pagamento. Se la deviazione non avviene automaticamente, si prega di cliccare sul bottone "Paga ora".';
+$GLOBALS['TL_LANG']['MSC']['pay_with_redirect'][2] = 'Paga ora';
 $GLOBALS['TL_LANG']['ISO']['backendPaymentNotFound'] = 'Modulo di pagamento non trovato!';
 $GLOBALS['TL_LANG']['ISO']['backendShippingNotFound'] = 'Modulo di spedizione non trovato!';
 $GLOBALS['TL_LANG']['ISO']['backendPaymentNoInfo'] = 'Questo modulo di pagamento non offre informazioni aggiuntivi.';
